--- a/projeto if838/projeto if838.cbp
+++ b/projeto if838/projeto if838.cbp
@@ -7,21 +7,23 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin\Debug\projeto if838" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Debug\" />
+				<Option output="bin/Debug/projeto if838" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="include" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin\Release\projeto if838" prefix_auto="1" extension_auto="1" />
-				<Option object_output="obj\Release\" />
+				<Option output="bin/Release/projeto if838" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -31,19 +33,21 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="include\Graph.h" />
-		<Unit filename="include\Heap_node.h" />
-		<Unit filename="include\MyPair.h" />
-		<Unit filename="include\OptimizationProblem.h" />
-		<Unit filename="include\PONInstance.h" />
-		<Unit filename="include\Vertex.h" />
-		<Unit filename="src\Graph.cpp" />
-		<Unit filename="src\Heap_node.cpp" />
-		<Unit filename="src\MyPair.cpp" />
-		<Unit filename="src\OptimizationProblem.cpp" />
-		<Unit filename="src\PONInstance.cpp" />
-		<Unit filename="src\Vertex.cpp" />
-		<Unit filename="src\main.cpp" />
+		<Unit filename="include/Graph.h" />
+		<Unit filename="include/Heap_node.h" />
+		<Unit filename="include/MyPair.h" />
+		<Unit filename="include/OptimizationProblem.h" />
+		<Unit filename="include/PONInstance.h" />
+		<Unit filename="include/Read_OSM.h" />
+		<Unit filename="include/Vertex.h" />
+		<Unit filename="src/Graph.cpp" />
+		<Unit filename="src/Heap_node.cpp" />
+		<Unit filename="src/MyPair.cpp" />
+		<Unit filename="src/OptimizationProblem.cpp" />
+		<Unit filename="src/PONInstance.cpp" />
+		<Unit filename="src/Read_OSM.cpp" />
+		<Unit filename="src/Vertex.cpp" />
+		<Unit filename="src/main.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
